feat: sprint 8 — GCal-style disponibilités UI, multi-bloc agenda, patients médecin
Backend:
- DefineDisponibiliteUseCase: support multiple blocks per day (drop unique constraint V8)
- DeleteDisponibiliteUseCase: new use case to remove a single availability block
- GetPatientsMedecinUseCase + PatientSummary projection: paginated patient list for médecin
- ReprogrammerRendezVousUseCase: reschedule RDV to new date/time
- AgendaController: new endpoints DELETE /disponibilites/{id}, GET /patients, PUT /rdv/{id}/reprogrammer
- JpaRendezVousRepository: queries for medecin RDVs by date range and patient list
- SpringDataDisponibiliteRepository: findByMedecinId returns all blocks (not just one per day)
- EmailService, RappelScheduler: minor fixes and test alignment
- V8 migration: drop unique constraint on (medecin_id, jour_semaine) in disponibilites

Frontend:
- disponibilites/page: full GCal layout — left settings panel with inline expandable day rows, right full-height calendar grid
- DisponibiliteForm: simplified to single time range (heureDebut → heureFin) + duration + cancel/save; removed matin/après-midi split
- AvailabilityWeekGrid: GCal-style full-column blue fills with slot subdivision cards inside
- AgendaMedecinView: agenda calendar grid with week/month navigation
- AgendaCalendarGrid: new component for calendar body rendering
- RdvTimeline, RdvTimelineItem: appointment timeline with questionnaire display and cancel/reschedule actions
- patients/page: paginated patient list for médecin dashboard
- PatientListItem: patient row component with last RDV info
- hooks, api: useDeleteDisponibilite, useRdvsMedecin date-range query, usePatientsMedecin
- lib/types: PatientSummary, PatientsPage types